c++: Fix array type dependency [PR 98107]

I'd missed some paths through build_cplus_array_type, plus, some
arrays come via the C-type builder.  This propagates dependency in
more places and asserts that in the cases where TYPE_DEPENDENT_P_VALID
is unset, the type is non-dependent.

	PR c++/98107
	gcc/cp/
	* tree.c (build_cplus_array_type): Mark dependency of new variant.
	(cp_build_qualified_type_real, strip_typedefs): Assert
	TYPE_DEPENDENT_P_VALID, or not a dependent type.